refactor: Improved quest drops handling
Refactored all quests to use QuestDroplist and the new giveItemRandomly() signature.